--- a/Day 1/intro.ipynb
+++ b/Day 1/intro.ipynb
@@ -29,8 +29,8 @@
     "- Python is a general purpose, high-level, interpreted, programming language.\n",
     "\n",
     "- It is most popular in AI and ML.\n",
-    "- It was developed by Guido Van Rossum in 1989. Publically available feb/20/1991.\n",
-    "- Python name inspired by \"Monte Flying Python Circus\" broadcast by BBC in 1969-74."
+    "- It was developed by <code>Guido Van Rossum</code> in 1989. Publically available <date>Feb/20/1991</date>.\n",
+    "- Python name inspired by <code>\"Monte Flying Python Circus\"</code> broadcast by BBC in 1969-74."
    ]
   },
   {
@@ -46,7 +46,7 @@
    "source": [
     "- <strong> General Purpose : </strong> Can be used for wide range of applications.\n",
     "\n",
-    "- <strong> High-level / OOps : </strong>  Provide abstractions that simplify complex programming tasks, including (Object Oriented Programming concepts) OOPs.\n",
+    "- <strong> High-level / OOPs : </strong>  Provide abstractions that simplify complex programming tasks, including (Object Oriented Programming concepts) OOPs.\n",
     "- <strong> Free & Open source : </strong> Available free of cost and easy to code beacause of large open source community.\n",
     "- <strong> Extensible feature / Scripting : </strong> We can write some python code in other programming languages. For example : <em>Chaquopy</em> in Android and <em>pyscript</em> in HTML.\n",
     "- <strong> Portable / Platform independent : </strong> We can write same python code in Linux, Windows, Android and IOS.\n",
