--- a/Day 1/intro.ipynb
+++ b/Day 1/intro.ipynb
@@ -19,7 +19,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b><u> What is Python? </b>"
+    "<b><u> What is Python? </u> </b>"
    ]
   },
   {
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b><u> Adavntages / Features of Python </b>"
+    "<b><u> Adavntages / Features of Python </u> </b>"
    ]
   },
   {
@@ -59,7 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b><u> Disadavntages / Limitations of Python </b>"
+    "<b><u> Disadavntages / Limitations of Python </u> </b>"
    ]
   },
   {
@@ -76,7 +76,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b><u> Applications of Python </b>\n"
+    "<b><u> Applications of Python </u> </b>\n"
    ]
   },
   {
@@ -97,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b><u> Python is interpreted or Compiled ? </b>\n"
+    "<b><u> Python is interpreted or Compiled? </u> </b>\n"
    ]
   },
   {
@@ -111,7 +111,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b><u> Versions / Flavours of Python </b>"
+    "<b><u> Versions / Flavours of Python </u> </b>"
    ]
   },
   {
