--- a/Day 2/intro2.ipynb
+++ b/Day 2/intro2.ipynb
@@ -371,7 +371,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b> <u> Variable </b>"
+    "<b> <u> Variable </u> </b>"
    ]
   },
   {
@@ -392,7 +392,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b> <u> Literals </b>"
+    "<b> <u> Literals </u> </b>"
    ]
   },
   {
