--- a/Day 1/intro.ipynb
+++ b/Day 1/intro.ipynb
@@ -123,7 +123,7 @@
     "- <b> Jython </b> : <code> Python Interact with Java libraries. </code> \n",
     "- <b> IronPython </b> : <code> Python Interact with .NET libraries. </code>\n",
     "- <b> PyPy </b> : <code> Utilize JIT compilation for performance improvement over cpython. </code>\n",
-    "- <b> MicroPython </b> : <code> lightweight implementation optimized for microcontrollers and embedded systems.\n",
+    "- <b> MicroPython </b> : <code> lightweight implementation optimized for microcontrollers and embedded systems.</code>\n",
     "- <b> CPython </b> : <code> The default and most widely used implementation of Python, written in C. </code>\n",
     "- <b> Anaconda </b> : <code> (although it is primarily a distribution that includes CPython, it also provides additional tools and libraries). </code>"
    ]
